--- a/linux/pi_USB - Setup/README
+++ b/linux/pi_USB - Setup/README
@@ -1,6 +1,10 @@
-Do inital setup (wifi/domain/enable ssh)
-Set scripts with execute flag 'chmod u+x script.sh'
-Execute step1.sh
-After reboot 
-Exectue step2.sh
-Reboot again
+## Init Setup
+[ ] Do inital setup (wifi/domain/enable ssh)
+[ ] Set scripts with execute flag 'chmod u+x step1.sh'
+[ ] Execute step1.sh
+[ ] After reboot 
+[ ] Exectue step2.sh
+[ ] Reboot again
+
+### Findings
+Need to install git & python3-pip on "lite" version (newesty)
